# vol-surface-opt-trans

./: .gitignore  Makefile  README.md  pyproject.toml  substack_post_draft.md
configs/: base.yaml  data.yaml  data_local_example.yaml  density.yaml  distances.yaml  experiments.yaml  physical.yaml  plotting.yaml  svi.yaml  tau_buckets.yaml
configs/tests/: golden.yaml
docs/: UNITS_CONVENTION.md  VRP_DEFINITIONS.md
outputs/report/: REPORT.md
outputs/report/iv_rv_convergence/: IV_RV_CONVERGENCE_SUMMARY.md
outputs/report/ot_findings/: DIAGNOSTICS.md  OPTIMAL_TRANSPORT_FINDINGS.md  decile_chart.html  ot_w1_map.html  ot_w2_map.html  surfaces_comparison_7d.html  surfaces_q_vs_p_7d.html  w1_vs_rv_iv_scatter.html  w1_w2_timeseries.html
pipeline/: __init__.py  config.py  logging_utils.py  run.py  run_stages.py
scripts/: debug_svi_slice.py  experiment_iv_rv_convergence.py  gaussian_w1_w2_visualization.py  generate_ot_report.py  run_full_pipeline.sh  rv_iv_analysis.py  rv_iv_unit_diagnostic.py  test_p_estimation.py  validate_fhs_garch.py
src/: __init__.py
src/distances/: __init__.py  moments.py  quantile_gaps.py  svi_params.py  wasserstein.py
src/distribution/: __init__.py  constant_maturity.py  diagnostics.py  physical.py  risk_neutral.py
src/experiments/: __init__.py  golden.py  model_error.py  q_vs_p.py  q_vs_q.py  report.py
src/surface/: __init__.py  call_prices.py  svi_fit.py  tau_mapping.py
src/utils/: units.py
substack_post/: README.md  draft.md
tests/: __init__.py  test_pipeline.py
